ログアウトリンクの実装

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -14,10 +14,10 @@
   <% if current_user.id == @user.id %>
     <div class="user-action">
       <div class="user-action-common">
-        <%= link_to "#" do %>
-          <i class="fas fa-sign-out-alt fa-2x"></i>
-        <% end %>
-        <span>ログアウト</span>
+      <%= link_to destroy_user_session_path, method: :delete do %>
+      <i class="fas fa-sign-out-alt fa-2x"></i>
+      <% end %>
+      <span>ログアウト</span>
       </div>
       <div class="user-action-common">
         <%= link_to "#" do %>
