--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,6 +9,11 @@
       <%= @user.name %>
     </div>
 
+    <div class="profile-text">
+      <%= @user.self_introduction %>
+    </div>
+
+
   </div>
 
   <% if current_user.id == @user.id %>
